# repro-3799

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
